--- a/index.html
+++ b/index.html
@@ -114,30 +114,22 @@
 </div>
 <!--header部分结束-->
 <!--banner部分开始-->
-	<div class="banner">
-		<div class="moveleft"></div>
-		<div class="moveright"></div>
-		<ul class="paganation">
-			<li class="dian"></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-		<ul class="content">
-			<li class="iphone6s">
-				<a class="link" href=""></a>
-			</li>
-			<li class="ipadpro">
-				<a class="link" href=""></a>
-			</li>
-			<li class="watchs">
-				<a class="link" href=""></a>
-			</li>
-			<li class="macbook">
-				<a class="link" href=""></a>
-			</li>
-		</ul>
-	</div>
+<div class="lunbo">
+	<ul class="lunbo-inner">
+		<li class="item tu1 active"><a href=""></a></li>
+		<li class="item tu2"><a href=""></a></li>
+		<li class="item tu3"><a href=""></a></li>
+		<li class="item tu4"><a href=""></a></li>
+	</ul>
+	<ul class="zhishi">
+		<li class="active"></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
+	<i class="lzuo"></i>
+	<i class="lyou"></i>
+</div>
 <!--banner部分结束-->
 <!--图片展示部分开始-->
 <div class="container">
